--- a/css/q_common.css
+++ b/css/q_common.css
@@ -41,4 +41,92 @@ html,body{
 	margin-left: 5px;
 }
 
-
+/*用loading的样式文件*/
+#loading{
+    /* background:color url x y repeat 按需要更换 */
+    background:url(../img/loading.png) center no-repeat;
+    /* background-size:auto auto || cover 代表以宽或高填满元素背景 */
+    background-size:cover;
+    /* 随便设置宽高值，测试 */
+    width:65px;
+    height:65px;
+    /* 设置默认样式，开启3d硬件加速 */
+    -webkit-transform:translate3d(0,0,0);
+    -moz-transform:translate3d(0,0,0);
+    transform:translate3d(0,0,0);
+    /* 设置动画，animation:动画名称 动画播放时长单位秒或微秒 动画播放的速度曲线linear为匀速 动画播放次数infinite为循环播放; */
+    -webkit-animation:play 2s linear infinite;
+    -moz-animation:play 2s linear infinite;
+    animation:play 2s linear infinite;
+}
+@-webkit-keyframes play{
+    0%  {
+        /*
+        水平翻转
+        */
+       /* -webkit-transform:rotateY(0deg);*/
+        /*
+        垂直翻转
+        -webkit-transform:rotateX(0deg);
+        
+        */
+        /*顺时针旋转*/
+        -webkit-transform:rotate(0deg);
+        /*
+        逆时针旋转
+        -webkit-transform:rotate(0deg);
+        */
+    }
+    100% {
+        /* 水平翻转 */
+        /*-webkit-transform:rotateY(360deg);*/
+        /* 垂直翻转
+        -webkit-transform:rotateX(360deg);
+        */
+        /*顺时针旋转*/
+        -webkit-transform:rotate(360deg);
+        /*
+        逆时针旋转
+        -webkit-transform:rotate(-360deg);
+        */
+    }
+}
+@-moz-keyframes play{
+    0%  {
+        /*-moz-transform:rotateY(0deg);*/
+        /*
+        -moz-transform:rotateX(0deg);
+        */
+        -moz-transform:rotate(0deg);
+        /*
+        -moz-transform:rotate(0deg);
+        */
+    }
+    100% {
+        /*-moz-transform:rotateY(360deg);*/
+        /*
+        -moz-transform:rotateX(360deg);
+         */
+        -moz-transform:rotate(360deg);
+        /*-moz-transform:rotate(-360deg);*/
+       
+    }
+}
+@keyframes play{
+    0%  {
+        /*transform:rotateY(0deg);*/
+        /*
+        transform:rotateX(0deg);*/
+        transform:rotate(0deg);
+       /* transform:rotate(0deg);*/
+        
+    }
+    100% {
+       /* transform:rotateY(360deg);*/
+        /*
+        transform:rotateX(360deg); */
+        transform:rotate(360deg);
+        /*transform:rotate(-360deg);*/
+       
+    }
+}
