--- a/css/documentDetails.css
+++ b/css/documentDetails.css
@@ -32,3 +32,13 @@
 	height: 25px;
 	line-height: 25px;
 }
+.gaiYueBdColor{
+	background-color: #cccccc;
+	width: 60px;
+	height: 40px;
+	text-align: center;
+	float:left;
+	border:solid 1px #666666;
+	border-right-color:transparent ;
+	cursor: pointer;
+}
