--- a/css/documentDetails.css
+++ b/css/documentDetails.css
@@ -33,16 +33,61 @@
 	line-height: 25px;
 }
 .gaiYueBdColor{
-	background-color: #cccccc;
-	width: 60px;
+	background-color: #eaebed;
+	width:80px;
 	height: 40px;
 	text-align: center;
 	float:left;
-	border:solid 1px #666666;
-	border-right-color:transparent ;
+	border:solid 1px #e0e0e0;
 	cursor: pointer;
+	margin-right:-1px;
+	margin-top:-1px;
 }
 .layui-form-radio{
 	margin-right: 2px;
 	margin-top: 13px;
+}
+.bgFFFFFF{
+	background-color: #ffffff;
+}
+.shijiankuaili{
+	display: inline-block;
+	float: left;
+	cursor: pointer;
+	position: relative;
+}
+.sifangkuai{
+	display: inline-block;
+	width: 80px;
+	height: 30px;
+	line-height: 30px;
+	border:solid 1px #e0e0e0;
+	text-align: center;
+	margin-right:-1px;
+	margin-top:-1px;
+}
+.bgFFFFFFShijianDuan{
+	background-color: #eaebed;
+}
+.ShijianDuanMan{
+	display: inline-block;
+	font-size: 18px;
+	color: #666666;
+	position: absolute;
+	right: 0px;
+	bottom:-3px;
+	-webkit-transform:scale(0.5);
+    -moz-transform:scale(0.5);
+    transform:scale(0.5);
+}
+.yixuanshijianduan{
+	display:none;
+	font-size: 18px;
+	color: red;
+	position: absolute;
+	top: -5px;
+	left:-8px;
+	-webkit-transform:scale(0.5);
+    -moz-transform:scale(0.5);
+    transform:scale(0.5);
 }
