后台页面完成 回访页面样式调整

--- a/css/documentDetails.css
+++ b/css/documentDetails.css
@@ -89,5 +89,6 @@
 	left:-8px;
 	-webkit-transform:scale(0.5);
     -moz-transform:scale(0.5);
+    -transform:scale(0.5);
     transform:scale(0.5);
 }
