--- a/css/z_bj2yh2sb.css
+++ b/css/z_bj2yh2sb.css
@@ -38,6 +38,7 @@
     /*min-height: 200px;*/
     border: 1px solid #999999;
     /*overflow: hidden;*/
+    background-color: white;
 }
 
 .z_pxBox {
