--- a/css/z_workbench.css
+++ b/css/z_workbench.css
@@ -11,6 +11,9 @@
     color: rgb(144,144,144);
 }
 
+.redColor {
+    color: rgb(253,109,100);
+}
 .z_mt10 {
     margin-top: 10px;
 }
@@ -601,7 +604,7 @@
 
 .z_order_content .z_order_content_box .z_content_box_question {
     min-height: 38px;
-    border: 1px solid #EAEBED;
+    border: 1px dashed #EAEBED;
     padding-left: 30px;
     padding-bottom: 10px;
     margin-top: 17px;
