修改呼叫工作台

--- a/css/visiter.css
+++ b/css/visiter.css
@@ -4,6 +4,15 @@
 	margin-left: 1%;
 	
 }
+
+th,td {
+	cursor: default;
+}
+
+.clickBackGColor {
+	background-color: #EAEBED;
+}
+
 .vit_main_header_span{
 	display: inline-block;
 	width: 98%;
